--- a/config/database.yml
+++ b/config/database.yml
@@ -6,24 +6,25 @@
 #
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: <%=ENV['DATABASE'] || test_guru_default %>
   encoding: unicode
+  pool: 5
   host: localhost
   username: <%= ENV['PSQL_USERNAME'] %>
   password: <%= ENV['PSQL_PASSWORD'] %>
 
 development:
   <<: *default
-  database: test_guru_development
+  database: <%=ENV['DATABASE'] || test_guru_development %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test_guru_test
+  database: <%=ENV['DATABASE'] || test_guru_test %>
 
 production:
   <<: *default
-  database: test_guru_production
+  database: <%=ENV['DATABASE'] || test_guru_production %>
   url: <%=ENV['DATABASE_URL'] %>
