--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,6 @@
 #
 default: &default
   adapter: postgresql
-  database: <%=ENV['DATABASE'] || test_guru_default %>
   encoding: unicode
   pool: 5
   host: localhost
@@ -15,16 +14,16 @@ default: &default
 
 development:
   <<: *default
-  database: <%=ENV['DATABASE'] || test_guru_development %>
+  database: <%=ENV['DATABASE'] || 'test_guru_development' %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: <%=ENV['DATABASE'] || test_guru_test %>
+  database: <%=ENV['DATABASE'] || 'test_guru_test' %>
 
 production:
   <<: *default
-  database: <%=ENV['DATABASE'] || test_guru_production %>
+  database: <%=ENV['DATABASE'] || 'test_guru_production' %>
   url: <%=ENV['DATABASE_URL'] %>
