--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^5.1.1",
-    "webpack": "^5.88.2"
+    "@rails/webpacker": "5.4.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.8.7",
-    "webpack-dev-server": "^4.15.1"
+    "@webpack-cli/serve": "^2.0.5",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3"
   }
 }
