--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
+  "name": "Test-Guru",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "5.4.4"
+    "@popperjs/core": "^2.11.8",
+    "@rails/actioncable": "^6.0.0",
+    "@rails/activestorage": "^6.0.0",
+    "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.4.4",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.10.5",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
+    "turbolinks": "^5.2.0",
+    "webpack": "4.46.0"
   },
+  "version": "0.1.0",
   "devDependencies": {
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.8.7",
-    "@webpack-cli/serve": "^2.0.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3"
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3"
   }
 }
